feat: update list users to require auth token and limit response
