# definitions/openapi.yaml
@@ -50,7 +50,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AuthLoginResponse'
         '400':
-          description: Bad Request (e.g., invalid credentials)
+          description: Bad Request
           content:
             application/json:
               schema:
@@ -60,27 +60,15 @@ paths:
     get:
       tags: 
         - Users
-      summary: Retrieve all users
+      summary: Attendees and hosts can only retrieve their own details
       operationId: getUsers
       parameters:
-        - in: query
-          name: role
+        - in: header
+          name: Authorization
+          required: true
           schema:
             type: string
-            enum: [host, attendee]
-          description: Filter users by role
-        - in: query
-          name: limit
-          schema:
-            type: integer
-            example: 10
-          description: Number of users to return
-        - in: query
-          name: offset
-          schema:
-            type: integer
-            example: 0
-          description: Offset for pagination
+          description: Bearer token for authentication
       responses:
         '200':
           description: List of users
@@ -91,32 +79,18 @@ paths:
                 items:
                   $ref: '#/components/schemas/User'
   /users/{id}:
-    get:
-      tags: 
-        - Users
-      summary: Retrieve a user by ID
-      operationId: getUserById
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: User retrieved successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '404':
-          description: User not found
     patch:
       tags: 
         - Users
       summary: Update a user
       operationId: updateUser
       parameters:
+        - in: header
+          name: Authorization
+          required: true
+          schema:
+            type: string
+          description: Bearer token for authentication
         - in: path
           name: id
           required: true
@@ -156,6 +130,12 @@ paths:
       summary: Delete a user
       operationId: deleteUser
       parameters:
+        - in: header
+          name: Authorization
+          required: true
+          schema:
+            type: string
+          description: Bearer token for authentication
         - in: path
           name: id
           required: true
@@ -178,7 +158,7 @@ paths:
           required: true
           schema:
             type: string
-          description: Bearer token for authentication (Only hosts can create events)
+          description: Bearer token for authentication
       requestBody:
         required: true
         content:
@@ -210,24 +190,6 @@ paths:
         - Events
       summary: Retrieve all events
       operationId: getEvents
-      parameters:
-        - in: query
-          name: hostId
-          schema:
-            type: string
-          description: Filter events by host ID
-        - in: query
-          name: limit
-          schema:
-            type: integer
-            example: 10
-          description: Number of events to return
-        - in: query
-          name: offset
-          schema:
-            type: integer
-            example: 0
-          description: Offset for pagination
       responses:
         '200':
           description: List of events
@@ -264,6 +226,12 @@ paths:
       summary: Update an event
       operationId: updateEvent
       parameters:
+        - in: header
+          name: Authorization
+          required: true
+          schema:
+            type: string
+          description: Bearer token for authentication
         - in: path
           name: id
           required: true
